<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">
    <View
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@drawable/gradient_background"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                style="@style/CardStyle"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/progressIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:progress="70"
                        app:indicatorColor="@color/progress_primary"
                        app:indicatorSize="120dp"
                        app:trackColor="@color/progress_background"
                        app:trackThickness="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:text="@string/today_progress"
                        android:textColor="@color/text_secondary"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/count_progress"
                        android:textColor="@color/text_secondary"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                style="@style/CardStyle"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/cardProgress">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="14dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/translate_word"
                            android:gravity="center"
                            android:textColor="@color/text_secondary"
                            android:textSize="16sp"
                            android:layout_centerVertical="true" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnListen"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:padding="8dp"
                            app:icon="@drawable/ic_volume"
                            app:iconGravity="textStart"
                            app:iconPadding="0dp"/>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tvWord"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/word"
                        android:textColor="@color/text_secondary"
                        android:textSize="36sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvCorrectCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/correct_count"
                                android:textColor="@color/success"
                                android:textSize="24sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/correct"
                                android:textColor="@color/text_secondary"/>
                        </LinearLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/divider"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvWrongCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wrong_count"
                                android:textColor="@color/error"
                                android:textSize="24sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/errors"
                                android:textColor="@color/text_secondary"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/optionsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/cardWord">


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardAnswerStyle">

                    <LinearLayout
                        android:id="@+id/layoutAnswer1"
                        style="@style/AnswerVariantStyle">

                        <TextView
                            android:id="@+id/tvVariantNumber1"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="12dp"
                            android:background="@drawable/shape_rounded_variants"
                            android:gravity="center"
                            android:text="@string/num_1"/>

                        <TextView
                            android:id="@+id/tvVariantValue1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:gravity="center"
                            android:textColor="@color/text_secondary"
                            android:text="@string/answer_1"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardAnswerStyle">

                    <LinearLayout
                        android:id="@+id/layoutAnswer2"
                        style="@style/AnswerVariantStyle">

                        <TextView
                            android:id="@+id/tvVariantNumber2"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="12dp"
                            android:background="@drawable/shape_rounded_variants"
                            android:gravity="center"
                            android:text="@string/num_2"/>

                        <TextView
                            android:id="@+id/tvVariantValue2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:gravity="center"
                            android:textColor="@color/text_secondary"
                            android:text="@string/answer_2"/>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    style="@style/CardAnswerStyle">

                    <LinearLayout
                        android:id="@+id/layoutAnswer3"
                        style="@style/AnswerVariantStyle">

                        <TextView
                            android:id="@+id/tvVariantNumber3"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="12dp"
                            android:background="@drawable/shape_rounded_variants"
                            android:gravity="center"
                            android:text="@string/num_3"/>

                        <TextView
                            android:id="@+id/tvVariantValue3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:gravity="center"
                            android:textColor="@color/text_secondary"
                            android:text="@string/answer_3"/>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    style="@style/CardAnswerStyle"
                    android:layout_marginBottom="16dp">

                    <LinearLayout
                        android:id="@+id/layoutAnswer4"
                        style="@style/AnswerVariantStyle">

                        <TextView
                            android:id="@+id/tvVariantNumber4"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="12dp"
                            android:background="@drawable/shape_rounded_variants"
                            android:gravity="center"
                            android:text="@string/num_4"/>

                        <TextView
                            android:id="@+id/tvVariantValue4"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:gravity="center"
                            android:textColor="@color/text_secondary"
                            android:text="@string/answer_4"/>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>